--- a/WCSP2018/WCSP18_V5.tex
+++ b/WCSP2018/WCSP18_V5.tex
@@ -40,7 +40,7 @@ Shenzhen, Guangdong, China, 518172
 
 
 \begin{abstract}
-Beam division multiple access (BDMA) has recently been proposed for massive multiple-input multiple-output (MIMO) systems by simultaneously transmitting multiple users' data streams via different beams. Despite its many advantages, BDMA may suffer from a larger peak-to-average-power ratio (PAPR) as the number of transmit antennas increases. In this work, we propose to explicitly incorporate the PAPR constraints into the BDMA design by jointly performing hybrid analog-digital precoding and user-beam scheduling. More specifically, the proposed scheme designs the digital precoder with explicit PAPR constraints. In addition, to facilitate the hybrid precoder design, the proposed scheme opportunistically schedules users who are near orthogonal in the analog beam domain. To efficiently compute the optimal hybrid precoder and user-beam scheduling, we develop a greedy algorithm that first opportunistically selects users before their corresponding hybrid precoders are derived with explicit PAPR constraints. Simulation results confirm the effectiveness of proposed PAPR-aware BDMA scheme.\cite{Niu1810:PAPR}\cite{Niu1905:Clustered}\cite{DBLP:conf/vtc/ZhangNP18}
+Beam division multiple access (BDMA) has recently been proposed for massive multiple-input multiple-output (MIMO) systems by simultaneously transmitting multiple users' data streams via different beams. Despite its many advantages, BDMA may suffer from a larger peak-to-average-power ratio (PAPR) as the number of transmit antennas increases. In this work, we propose to explicitly incorporate the PAPR constraints into the BDMA design by jointly performing hybrid analog-digital precoding and user-beam scheduling. More specifically, the proposed scheme designs the digital precoder with explicit PAPR constraints. In addition, to facilitate the hybrid precoder design, the proposed scheme opportunistically schedules users who are near orthogonal in the analog beam domain. To efficiently compute the optimal hybrid precoder and user-beam scheduling, we develop a greedy algorithm that first opportunistically selects users before their corresponding hybrid precoders are derived with explicit PAPR constraints. Simulation results confirm the effectiveness of proposed PAPR-aware BDMA scheme.
 \end{abstract}
 
 
